--- a/hotelWebsite/css/flex-style.css
+++ b/hotelWebsite/css/flex-style.css
@@ -31,6 +31,7 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
+  background: #f9f9f8;
 }
 a {
   color: #fff;
@@ -75,6 +76,7 @@ li {
   color: #333;
   background: #fff;
   margin-bottom: 20px;
+  border-radius: 8px;
 }
 .btn-light:hover {
   color: #fff;
@@ -194,16 +196,18 @@ li {
 .services {
   display: flex;
   width: 100vw;
+  min-height: 250px;
   flex-direction: column;
 }
 .box {
   display: flex;
   width: 100%;
+  height: 100%;
+
   flex-direction: column;
   padding: 20px;
   text-align: center;
-  min-height: 300px;
-  max-height: 400px;
+
   height: auto;
   margin-bottom: 20px;
 }
@@ -211,6 +215,118 @@ li {
   margin-bottom: 10px;
 }
 
+/* about page */
+#about {
+  height: 50vh;
+}
+.title {
+  font-size: 2.4rem;
+  line-height: 1.2;
+  margin: 10px 0px;
+}
+.hero {
+  display: flex;
+  height: 50vh;
+  overflow: hidden;
+}
+.hero .rich-text {
+  padding: 20px;
+  width: 50vw;
+}
+
+.hero .showcase-img {
+  width: 100%;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero .showcase-img img {
+  max-height: 350px;
+  object-fit: cover;
+  object-position: center center;
+  transition: transform 4s ease;
+  border-radius: 50% 30%;
+}
+#testimonial {
+  width: 100vw;
+  background: url("../assets/photo-1.jpg") no-repeat center center/cover;
+  background-attachment: fixed;
+}
+#testimonial ul {
+  display: flex;
+  justify-content: cneter;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+#testimonial ul li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  padding: 8px;
+  max-width: 80vh;
+  background: var(--text-primary);
+  margin: 20px;
+}
+#testimonial ul li img {
+  height: 120px;
+  border-radius: 50%;
+  margin: 0 20px;
+}
+
+/* contact us */
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  overflow: hidden;
+  width: 90vw;
+  height: 60vh;
+}
+form label {
+  display: inline-block;
+}
+
+form input {
+  display: inline-block;
+  padding: 12px 20px;
+  border-radius: 4px;
+  border: 1px solid #333;
+  width: 100%;
+}
+.contact-us {
+  overflow: hidden;
+  background: #2a2a2a;
+  color: white;
+  display: flex;
+  margin-top: 20px;
+}
+form textarea {
+  display: inline-block;
+  padding: 12px 20px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+/* footer */
+footer {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  overflow: hidden;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 20px;
+  background: #333;
+  color: #fff;
+  padding-top: 10px;
+}
 @media (min-width: 768.8px) {
   .services {
     flex-direction: row;
@@ -230,24 +346,10 @@ li {
     width: 50vw;
     height: 550px;
   }
-}
-
-/* about page */
-/* #about {
-  height: 50vh;
-} */
-/* footer */
-footer {
-  display: flex;
-  justify-content: center;
-  position: sticky;
-  overflow: hidden;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  padding: 20px;
-  background: #333;
-  color: #fff;
-  padding-top: 10px;
+  #testimonial ul li {
+    flex-direction: row;
+  }
+  form textarea {
+    width: 50%;
+  }
 }
