--- a/hotelWebsite/css/flex-style.css
+++ b/hotelWebsite/css/flex-style.css
@@ -32,6 +32,14 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
   background: #f9f9f8;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 a {
   color: #fff;
@@ -50,7 +58,15 @@ li {
   list-style: none;
 }
 /* Utility Classes */
-
+.py-1 {
+  padding: 10px 0px;
+}
+.py-2 {
+  padding: 10px 0px;
+}
+.py-3 {
+  padding: 10px 0px;
+}
 .text-primary {
   color: var(--text-primary);
 }
@@ -85,6 +101,7 @@ li {
 .bg-primary {
   background: #f7c08a;
 }
+
 /* End Utility Classes */
 
 /* Navbar */
@@ -227,6 +244,7 @@ li {
 .hero {
   display: flex;
   height: 50vh;
+  align-items: center;
   overflow: hidden;
 }
 .hero .rich-text {
@@ -235,24 +253,41 @@ li {
 }
 
 .hero .showcase-img {
-  width: 100%;
   width: 50vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 200px;
 }
 .hero .showcase-img img {
-  max-height: 350px;
+  display: block;
+  height: 350px;
+  width: 80%;
   object-fit: cover;
   object-position: center center;
   transition: transform 4s ease;
-  border-radius: 50% 30%;
+  border-radius: 50%;
 }
 #testimonial {
   width: 100vw;
-  background: url("../assets/photo-1.jpg") no-repeat center center/cover;
   background-attachment: fixed;
+  margin-bottom: 0px;
+  background: url("../assets/photo-1.jpg") no-repeat center center/cover;
+}
+.testimonial-overlay {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+.l-heading {
+  color: white;
+  font-size: 2.5rem;
+  line-height: 1.2;
+  margin-top: 20px;
 }
 #testimonial ul {
   display: flex;
@@ -321,11 +356,11 @@ footer {
   width: 100%;
   left: 0;
   bottom: 0;
+  margin: 0;
   right: 0;
   padding: 20px;
   background: #333;
   color: #fff;
-  padding-top: 10px;
 }
 @media (min-width: 768.8px) {
   .services {
