--- a/cssBasics/11-box-model-and-positioning/style.css
+++ b/cssBasics/11-box-model-and-positioning/style.css
@@ -28,6 +28,14 @@ body {
 }
 
 .box-3 {
-  max-width: 800px;
+  /* max-width: 800px; */
   min-width: 500px;
+  /* T-R-B-L */
+  /* padding: 20px 90px 100px 10px; */
+
+  /* TB-LR */
+  /* padding: 20px 40px; */
+
+  /* T-LR-B */
+  padding: 20px 80px 120px;
 }
